--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest --verbose --runInBand --testLocationInResults --setupFiles dotenv/config",
     "test:watch": "npm run test -- --watch",
     "start": "node -r dotenv/config server.js",
-    "start:watch": "nodemon -r dotenv/config server.js"
+    "start:watch": "nodemon -r dotenv/config server.js",
+    "resetDB": "node -r dotenv/config lib/refreshData.js",
+    "uploadData": "node lib/refreshData.js"
   },
   "jest": {
     "testEnvironment": "node"
